# onlineshop

./: pyproject.toml
config/: settings.py  urls.py
pages/: forms.py  tests.py  urls.py  views.py
shop/: business.py  configs.py  forms.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product_category.py  0003_shoppingitem_product_pk.py  0004_remove_shoppingitem_product_pk.py  0005_alter_shoppingitem_shopping_cart.py  0006_product_user.py
shop/tests/: test_business.py  test_models.py
templates/: _base.html
templates/pages/: feedback.html  home.html  thanks.html
templates/registration/: login.html  logout.html
templates/shop/: add_new_product.html  edit_product.html  product_detail.html  product_list.html  shopping_cart.html  user_product_detail.html  user_product_list.html
